@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.3.0.RC1'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.72'
 }
 
 group = 'java.records'
@@ -18,8 +20,30 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-}
+	// CSV
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
+	// Kotlin
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	// Jackson
+	implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
+	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+	// Junit 5 support for Spring
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+	testImplementation("org.springframework.boot:spring-boot-starter-test") {
+		exclude group: 'junit', module: 'junit'
+		exclude group: 'org.assertj', module: 'assertj-core'
+		exclude group: 'org.mockito', module: 'mockito-core'
+	}
+	// kotlin test
+	testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+}
+compileJava {
+	options.compilerArgs += "--enable-preview" // java 14-preview
+}
 test {
 	useJUnitPlatform()
+	jvmArgs("--enable-preview")
 }
